--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Survey Service</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
       <button class="send-button">Отправить ответ</button>
     </div>
     <div class="result">
-      
+
    </div>
   </div>
   <script src="main.js"></script>
