--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <p class="quastion-font">Какой сейчас год?</p>
           </div>
           <div class="answer-list">
-            <input type="text" placeholder="Введите ответ" class="answer">
+            <input type="text" placeholder="Введите ответ" class="answer" id="answer">
           </div>
         </div>
 
       </div>
-      <button class="send-button">Отправить ответ</button>
+      <button class="send-button" id="sendButton">Отправить ответ</button>
     </div>
-    <div class="result">
+    <div class="result" id="result">
 
    </div>
   </div>
